# comprehensive-vehicle-specification

./: .gitignore  .pre-commit-config.yaml  =3.5  README.md  docker-compose.yaml  pyproject.toml
data/landing/bike/: structured_bike_data_cleaned.json
data/landing/car/: structured_car_data_cleaned.json
datalib/: Extractor.py  etl.py  utils.py
datalib/datasystem/: DataSystem.py  DefaultDataSystem.py  IcebergDataSystem.py  __init__.py
docker/: Dockerfile  spark-defaults.conf
raw/: bikes.py  cars.py
refined/: vehicles.py
scripts/: run.sh
trino_configs/: jvm.config
trino_configs/catalog/: raw.properties  refined.properties  trusted.properties
trusted/: bikes.py  cars.py
