[project]
name = "comprehensive-vehicle-specification"
version = "0.1.0"
description = "A data pipeline to process vehicle specifications using PySpark and Iceberg."
authors = [
    { name = "Samuel", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "pyspark>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["datalib"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "types-PyYAML>=6.0.12.20240311",
]

[tool.rye.dependencies]
pyspark = "^3.5.1"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
